# playground-iv41x1or

./: LICENSE.txt  README.md  techio.yml
cpp-project/: CMakeLists.txt  run.sh  validate.sh
cpp-project/cmake/Modules/: FindComputeCpp.cmake
cpp-project/src/exercises/: error_handling.cpp  hello_world.cpp  memory_1.cpp  memory_2.cpp  memory_3.cpp  memory_4.cpp  sandbox.cpp  sycl_debugging.cpp  vector-ops_1.cpp  vector-ops_2.cpp  vector-ops_3.cpp
markdowns/: configuration.md  error_handling.md  hello_world.md  intro.md  sandbox.md  summary.md  sycl_debugging.md  sycl_learn_more.md  sycl_memory_1.md  sycl_memory_2.md  sycl_memory_3.md  sycl_memory_4.md  template.md  vector_ops_1.md  vector_ops_2.md  vector_ops_3.md
